hard-gists/1218932/run.log
=== Docker Run Log for 1218932 ===
Started at: Mi 29. Okt 11:59:23 CET 2025

[2025-10-29 11:59:23] START: Running container for 1218932
[2025-10-29 11:59:24] SUCCESS: Container 31b3e4520a780c3ad22d1a714f696d60116ab46bbb334d25a13d174d049ec8e1 started for 1218932
=== Container logs for 1218932 ===
  File "/snippet.py", line 26
    print "Connected"
    ^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1218932 ===
[2025-10-29 11:59:26] INFO: Container 31b3e4520a780c3ad22d1a714f696d60116ab46bbb334d25a13d174d049ec8e1 has stopped
